manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __PROJPREFIX__-__CI_ENVIRONMENT_SLUG__
  labels:
    app: __PROJPREFIX__
    ref: __CI_ENVIRONMENT_SLUG__
    track: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: __PROJPREFIX__
      ref: __CI_ENVIRONMENT_SLUG__
  template:
    metadata:
      labels:
        app: __PROJPREFIX__
        ref: __CI_ENVIRONMENT_SLUG__
        track: stable
    spec:
      containers:
      - name: app
        image: __CI_REGISTRY_IMAGE__:__VERSION__
        imagePullPolicy: Always
        ports:
        - name: http-metrics
          protocol: TCP
          containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          timeoutSeconds: 2
