manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: __PROJPREFIX__-__CI_ENVIRONMENT_SLUG__
  labels:
    app: __PROJPREFIX__
    ref: __CI_ENVIRONMENT_SLUG__
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 8000
      protocol: TCP
  selector:
    app: __PROJPREFIX__
    ref: __CI_ENVIRONMENT_SLUG__
